Fixing curtain mode using non-default RDP port for Windows host.

While adding debug logging for the Win 10 curtain mode issue, I realized that
the host was not able to connect to its RDP session if a non-default port
number was set in the registry.  This is because the RDP session runs as
'Local Service' and does not have access to the registry.  This code was
originally added to address crbug.com/241214 and I think it may have been
implemented and tested on XP where it would work, but it wouldn't have on
later OSes.

My change is to move the code which needs to read the port number from the
registry from the RDP process to the Daemon process.  The port number will
then be passed to the RDP process when it is created.  The code which reads
from the registry will be reused in an upcoming CL so it has been put into
a helper method even though there is only one caller.

BUG=608477

Review-Url: https://codereview.chromium.org/1935003003
Cr-Commit-Position: refs/heads/master@{#391335}

Former-commit-id: 69094d5f4d39b81cce2e5234804c9868d428af76