remoting/host/win/rdp_client.h
@@ -37,12 +37,12 @@ class RdpClient : public base::NonThreadSafe {
     virtual void OnRdpClosed() = 0;
   };
 
-  RdpClient(
-      scoped_refptr<base::SingleThreadTaskRunner> caller_task_runner,
-      scoped_refptr<base::SingleThreadTaskRunner> ui_task_runner,
-      const webrtc::DesktopSize& screen_size,
-      const std::string& terminal_id,
-      EventHandler* event_handler);
+  RdpClient(scoped_refptr<base::SingleThreadTaskRunner> caller_task_runner,
+            scoped_refptr<base::SingleThreadTaskRunner> ui_task_runner,
+            const webrtc::DesktopSize& screen_size,
+            const std::string& terminal_id,
+            DWORD port_number,
+            EventHandler* event_handler);
   virtual ~RdpClient();
 
   // Sends Secure Attention Sequence to the session.
